--- a/themes/_light.scss
+++ b/themes/_light.scss
@@ -13,6 +13,7 @@
     --palette-default-shade-9: hsl(204, 10%, 100%);
 
     --palette-default-control-bg: hsl(204, 10%, 90%);
+    --palette-default-control-surface-1: hsl(204, 10%, 75%);
     --palette-default-control-hover-bg: hsl(204, 10%, 83%);
     --palette-default-control-disabled-bg: hsl(204, 10%, 90%);
 
