--- a/themes/_dark.scss
+++ b/themes/_dark.scss
@@ -13,6 +13,7 @@
     --palette-default-shade-9: hsl(204, 10%, 5%);
 
     --palette-default-control-bg: hsl(204, 10%, 20%);
+    --palette-default-control-surface-1: hsl(204, 10%, 30%);
     --palette-default-control-hover-bg: hsl(204, 10%, 25%);
     --palette-default-control-disabled-bg: hsl(204, 10%, 13%);
 
