Fix switch cross icon

--- a/components/_switch.scss
+++ b/components/_switch.scss
@@ -50,7 +50,7 @@
 
     transform: translateX( var(--switch-handle-transform) );
 
-    clip-path: var(--clip--polygon-cross);
+    clip-path: var(--clip-polygon-cross);
   }
 
   // Handle
