--- a/_colors.scss
+++ b/_colors.scss
@@ -11,7 +11,7 @@ html {
 
 // ========================================== Theme ==========================================
 
-body {
+body, .root {
   background-color: var(--scheme-background);
   color: var(--scheme-foreground);
 }
