Fix buttons not having focus outlines

--- a/components/_button.scss
+++ b/components/_button.scss
@@ -3,7 +3,7 @@
     /* Size settings */
     --btn-radius: var(--radius);
     --btn-font-size: var(--step-0);
-    --btn-focus-outline-width: var(--btn-border-width);
+    --btn-focus-outline-width: var(--stroke);
     --btn-focus-outline-offset: var(--btn-focus-outline-width);
     --btn-padding-vertical: var(--space-2xs);
     --btn-padding-horizontal: var(--space-xs);
