--- a/_typography.scss
+++ b/_typography.scss
@@ -6,7 +6,7 @@
     --heading-color: var(--scheme-foreground);
     --anchor-color: var(--scheme-main);
 
-    --paragraph-width: 100%;
+    --paragraph-width: 80ch;
 
     /* @link https://utopia.fyi/type/calculator?c=320,18,1.2,1240,20,1.25,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
 
@@ -33,68 +33,7 @@ html {
     background-color: var(--scheme-main);
 }
 
-a {
-    color: unset;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    color: var(--heading-color);
-    font-weight: bold;
-}
-
-h1 {
-    font-size: var(--step-5);
-}
-h2 {
-    font-size: var(--step-4);
-}
-h3 {
-    font-size: var(--step-3);
-}
-h4 {
-    font-size: var(--step-2);
-}
-h5 {
-    font-size: var(--step-1);
-}
-h6 {
-    font-size: var(--step-0);
-}
-
-* + p {
-    max-width: var(--paragraph-width);
-    margin-bottom: var(--space-s);
-}
-
 hr {
     border: none;
     border-top: var(--stroke) solid var(--scheme-surface-0);
-}
-
-strong {
-    font-weight: bold;
-}
-
-em {
-    font-style: italic;
-}
-
-.text-left {
-    text-align: left;
-}
-
-.text-center {
-    text-align: center;
-}
-
-.text-right {
-    text-align: right;
-}
-
-.text-muted {
-    color: var(--scheme-text-muted-color);
-}
-
-.text-small {
-    font-size: var(--step--1);
 }
