--- a/_sizes.scss
+++ b/_sizes.scss
@@ -28,7 +28,8 @@ $spaces: (
     "2xl-3xl": clamp(4.50rem, calc(3.46rem + 5.22vw), 7.50rem),
 
     /* Custom pairs */
-    "s-l": clamp(1.13rem, calc(0.65rem + 2.39vw), 2.50rem)
+    "s-l": clamp(1.13rem, calc(0.65rem + 2.39vw), 2.50rem),
+    "2xs-s": clamp(0.5625rem, 0.3234rem + 1.1957vi, 1.25rem)
 );
 
 /* @link https://utopia.fyi/space/calculator?c=320,18,1.2,1240,20,1.25,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
