--- a/themes/_light.scss
+++ b/themes/_light.scss
@@ -1,29 +1,29 @@
 @mixin theme-light() {
-    --palette-default-main: hsl(204, 100%, 53%);
-    --palette-default-main-hover: hsl(204, 100%, 45%);
-    --palette-default-shade-0: hsl(204, 10%, 5%);
-    --palette-default-shade-1: hsl(204, 10%, 11%);
-    --palette-default-shade-2: hsl(204, 10%, 15%);
-    --palette-default-shade-3: hsl(204, 10%, 19%);
-    --palette-default-shade-4: hsl(204, 10%, 26%);
-    --palette-default-shade-5: hsl(204, 10%, 35%);
-    --palette-default-shade-6: hsl(204, 10%, 79%);
-    --palette-default-shade-7: hsl(204, 10%, 90%);
-    --palette-default-shade-8: hsl(204, 10%, 95%);
-    --palette-default-shade-9: hsl(204, 10%, 100%);
+    --palette-default-main: hsl(204deg 100% 53%);
+    --palette-default-main-hover: hsl(204deg 100% 45%);
+    --palette-default-shade-0: hsl(204deg 10% 5%);
+    --palette-default-shade-1: hsl(204deg 10% 11%);
+    --palette-default-shade-2: hsl(204deg 10% 15%);
+    --palette-default-shade-3: hsl(204deg 10% 19%);
+    --palette-default-shade-4: hsl(204deg 10% 26%);
+    --palette-default-shade-5: hsl(204deg 10% 35%);
+    --palette-default-shade-6: hsl(204deg 10% 79%);
+    --palette-default-shade-7: hsl(204deg 10% 90%);
+    --palette-default-shade-8: hsl(204deg 10% 95%);
+    --palette-default-shade-9: hsl(204deg 10% 100%);
 
-    --palette-default-control-bg: hsl(204, 10%, 90%);
-    --palette-default-control-surface-1: hsl(204, 10%, 75%);
-    --palette-default-control-hover-bg: hsl(204, 10%, 83%);
-    --palette-default-control-disabled-bg: hsl(204, 10%, 90%);
+    --palette-default-control-bg: hsl(204deg 10% 90%);
+    --palette-default-control-surface-1: hsl(204deg 10% 75%);
+    --palette-default-control-hover-bg: hsl(204deg 10% 83%);
+    --palette-default-control-disabled-bg: hsl(204deg 10% 90%);
 
     --palette-default-surface-0: var(--palette-default-shade-8);
 
     --palette-default-background: var(--palette-default-shade-9);
     --palette-default-foreground: var(--palette-default-shade-0);
     --palette-default-middleground: var(--palette-default-shade-6);
-    --palette-default-text-color: hsl(204, 0%, 5%);
-    --palette-default-text-muted-color: hsl(204, 0%, 70%);
+    --palette-default-text-color: hsl(204deg 0% 5%);
+    --palette-default-text-muted-color: hsl(204deg 0% 70%);
 
-    --palette-default-shadow: hsl(204, 10%, 70%);
+    --palette-default-shadow: hsl(204deg 10% 70%);
 }
