--- a/_reset.scss
+++ b/_reset.scss
@@ -3,6 +3,9 @@
    License: none (public domain)
 */
 
+// Style lint will not help you here!
+/* stylelint-disable */
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -40,8 +43,8 @@ ol, ul {
 blockquote, q {
   quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
+blockquote::before, blockquote::after,
+q::before, q::after {
   content: '';
   content: none;
 }
