--- a/components/_checkbox.scss
+++ b/components/_checkbox.scss
@@ -14,7 +14,7 @@
   height: var(--checkbox-size);
 }
 
-input[type=checkbox].checkbox {
+input[type="checkbox"].checkbox {
   --checkbox-checked-bg: var(--scheme-main);
   --checkbox-checked-hover-bg: var(--scheme-main-hover);
   --checkbox-size: var(--space-s);
