--- a/components/_radio-button.scss
+++ b/components/_radio-button.scss
@@ -4,7 +4,7 @@
     --input-radio-color: var(--scheme-foreground);
 }
 
-input[type=radio].input-radio {
+input[type="radio"].input-radio {
     appearance: none;
     vertical-align: middle;
     
