Update text input colors

--- a/palettes/_default.scss
+++ b/palettes/_default.scss
@@ -45,8 +45,8 @@
     --checkbox-unchecked-hover-bg: var(--control-hover-bg);
 
     // Text input
-    --text-input-bg: var(--scheme-background);
-    --text-input-placeholder-color: var(--scheme-shade-6);
+    --text-input-bg: var(--palette-default-shade-9);
+    --text-input-placeholder-color: var(--control-bg);
     --text-input-text-color: var(--scheme-text-color);
     --text-input-border-color: var(--control-bg);
 
