--- a/palettes/_default.scss
+++ b/palettes/_default.scss
@@ -26,6 +26,7 @@
     --scheme-shade-9: var(--palette-default-shade-9);
 
     --scheme-surface-0: var(--palette-default-surface-0);
+    --scheme-surface-1: var(--palette-default-surface-1);
 
     --control-bg: var(--palette-default-control-bg);
     --control-surface-1: var(--palette-default-control-surface-1);
