--- a/themes/_light.scss
+++ b/themes/_light.scss
@@ -18,6 +18,7 @@
     --palette-default-control-disabled-bg: hsl(204deg 10% 90%);
 
     --palette-default-surface-0: var(--palette-default-shade-8);
+    --palette-default-surface-1: var(--palette-default-shade-6);
 
     --palette-default-background: var(--palette-default-shade-9);
     --palette-default-foreground: var(--palette-default-shade-0);
