--- a/components/index.scss
+++ b/components/index.scss
@@ -2,5 +2,6 @@
 @forward "button";
 @forward "radio-button";
 @forward "text-input";
+@forward "input-select";
 @forward "checkbox";
 @forward "switch";
